--- a/src/jsonData/projectPayment.json
+++ b/src/jsonData/projectPayment.json
@@ -5,10 +5,58 @@
         "rupes":"2000",
         "type": "Online",
         "Platform": "Phone Pay",
-        "Payer Name" : "",
-        "Transaction Id": "",
-        "date": "",
+        "PayerName" : "Shraddha Jitendra Patil",
+        "TransactionId": "T2211281739191399812466",
+        "date": "28 Nov 2022",
         "description":"Project Booking Amount",
         "status" : "Done"
+    },
+    {
+        "id": 2,
+        "projectId": 1,
+        "rupes":"1500",
+        "type": "",
+        "Platform": "",
+        "PayerName" : "",
+        "TransactionId": "",
+        "date": "",
+        "description":"",
+        "status" : "Pending"
+    },
+    {
+        "id": 3,
+        "projectId": 1,
+        "rupes":"1500",
+        "type": "",
+        "Platform": "",
+        "PayerName" : "",
+        "TransactionId": "",
+        "date": "",
+        "description":"",
+        "status" : "Pending"
+    },
+    {
+        "id": 4,
+        "projectId": 1,
+        "rupes":"1000",
+        "type": "",
+        "Platform": "",
+        "PayerName" : "",
+        "TransactionId": "",
+        "date": "",
+        "description":"",
+        "status" : "Pending"
+    },
+    {
+        "id": 5,
+        "projectId": 1,
+        "rupes":"1000",
+        "type": "",
+        "Platform": "",
+        "PayerName" : "",
+        "TransactionId": "",
+        "date": "",
+        "description":"",
+        "status" : "Pending"
     }
 ]
