Database And Timesheet component implemented

--- a/src/jsonData/projectInfo.json
+++ b/src/jsonData/projectInfo.json
@@ -9,6 +9,7 @@
         "status":"Active",
         "startDate": "03 Dec 2022",
         "endDate": "",
-        "Description":""
+        "Description":"",
+        "projectLivePriview":""
     }
 ]
